# coordination_oru

./: .gitignore  .travis.yml  MemoryRequirementsPlot.ipynb  README.md  build.gradle  coordinator_default_config_pre.rviz  install.sh  install_ros.sh  launchTests.py  requirements.txt
OmplPlanner/: CMakeLists.txt
OmplPlanner/src/: OmplPlanner.cpp  StateValidityChecker.cpp
OmplPlanner/src/include/: StateValidityChecker.h
SimpleReedsSheppCarPlanner/: CMakeLists.txt
SimpleReedsSheppCarPlanner/src/: MultipleCircleReedsSheppCarPlanner.cpp
generators/dataset/: GenerateExperiences.py  GenerateOptimalityData.py  GenerateTestingDataset.py  GenerateTrainingDataset.py  PlotDatabase.py  Test.py
generators/logging/: AnalyzeLogs.py  AnalyzeMultipleLogs.py  AnalyzePlanningLogs.py  LogParser.py  Utils.py
generators/logging/DynamicTimeWarping/: CMakeLists.txt
generators/logging/DynamicTimeWarping/src/: comparePaths.cpp
generators/logging/tags/: default_tags.txt
graphml_generator/: CMakeLists.txt  PlotDatabase.py
graphml_generator/src/: generate_graphml.cpp
maps/: AGP_Basement.yaml  AGP_Floor4.yaml  AGP_Floor4_Hotspots.txt  BRSU_Floor0.yaml  BRSU_Floor0_Hotspots.txt  BRSU_Floor2.yaml  amk_map_floor_4.yaml  brsu_map_floor_0.yaml  brsu_map_floor_2.yaml  hospital_stage.yaml  test-map.yaml  test-uni.yaml
maps/ROPOD/: amk_map_floor_-1.yaml  brsu_map_floor_0.yaml
maps/config/Testing/: AGP_Basement_ChargingStations.csv  AGP_Basement_Hotspots.txt  AGP_Floor4_ChargingStations.csv  AGP_Floor4_Hotspots.txt  BRSU_Floor0_ChargingStations.csv  BRSU_Floor0_Hotspots.txt  hospital_stage_ChargingStations.csv  hospital_stage_Hotspots.txt
maps/config/Training/: AGP_Basement_Hotspots.txt  hospital_stage_Hotspots.txt
missions/: BRSU_Floor0.txt  ROPOD_BRSU.txt  narrow_corridor_locations.txt  university.txt
src/main/java/se/oru/coordination/coordination_oru/: TrajectoryEnvelopeCoordinator.java
src/main/java/se/oru/coordination/coordination_oru/demo/: DemoLauncher.java
src/main/java/se/oru/coordination/coordination_oru/motionplanning/: AbstractMotionPlanner.java
src/main/java/se/oru/coordination/coordination_oru/motionplanning/ompl/: OMPLPlanner.java  OMPLPlannerLib.java  ReedsSheppCarPlanner.java  ReedsSheppCarPlannerLib.java
src/main/java/se/oru/coordination/coordination_oru/tests/customTests/: BRSU_Floor0.java  CustomTesting.java  NarrowCorridor.java  ROPOD_BRSU_0.java  TestBaseClass.java  University.java
src/main/java/se/oru/coordination/coordination_oru/util/: RVizVisualization.java
